--- a/main.css
+++ b/main.css
@@ -8,3 +8,15 @@
 #hero .d-flex{
   height: 70vh;
 }
+
+@media (min-width:576px){
+
+}
+
+@media (min-width:768px){
+
+}
+
+@media (min-width:992px){
+  
+}
